# jsonschema_colander

./: .gitignore  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/jsonschema_colander/: __init__.py  converter.py  meta.py  types.py  validators.py
tests/: address.json  complex.json  conftest.py  extended_validation.json  extended_validation_allOf.json  geo.json  person.json  test_extended_validation.py  test_schema.py
tests/fields/: test_array.py  test_boolean.py  test_number.py  test_object.py  test_string.py
