[metadata]
name = jsonschema_colander
version = 0.1a1
url =
project_urls =
    Source Code = https://github.com/Novareto/jsonschema_colander
license = MIT license
author = Novareto GmbH
author_email = ck@novareto.de
maintainer = Novareto GmbH
maintainer_email = ck@novareto.de
description = Colander schema from jsonschema
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.8


[options.packages.find]
where=src
